--- a/static/CSS/stylesheet.css
+++ b/static/CSS/stylesheet.css
@@ -27,3 +27,13 @@ li{
 .font_700{
     font-weight: 700;
 }
+
+.tag{
+    width:66px;
+    height:26px;
+    background-color: #ff5569;
+    color:white;
+    text-align: center;
+    position: absolute;
+    top:504px;        
+}
