--- a/static/CSS/stylesheet.css
+++ b/static/CSS/stylesheet.css
@@ -7,11 +7,17 @@
     text-decoration: none;
     color:#333333;
     letter-spacing: -0.02em;
+    box-sizing: border-box;
 }
 
-
+img{
+    object-fit: cover;
+}
 body{
-    padding:0px 150px;
+    /* width:100%;
+    margin:auto 0; */
+    padding:0px 152px;
+    overflow-x: hidden;
 }
 
 li{
@@ -19,21 +25,28 @@ li{
     display: inline-block;
 }
 
-.font_B5B5B5_12{
+.color_B5B5B5{
     color: #b5b5b5;
+}
+
+.size_12{
     font-size:12px;
 }
 
-.font_700{
+.weight_700{
     font-weight: 700;
 }
 
 .tag{
+    position: absolute;
     width:66px;
     height:26px;
     background-color: #ff5569;
     color:white;
     text-align: center;
-    position: absolute;
-    top:504px;        
+    position: absolute;    
+}
+
+.hide{
+    display: none;
 }
