--- a/static/CSS/stylesheet_main.css
+++ b/static/CSS/stylesheet_main.css
@@ -3,7 +3,10 @@
     justify-content: end;
     margin-top:-40px;
     position: relative;
-    width:100%;
+    /* width:100%; */
+}
+#banner_img{
+    width:100vw;
 }
 #comp_banner .slider .slider_list .slider_item:not(:last-child){
     margin-right: 2px;
@@ -47,4 +50,139 @@
 
 .best_section{
     margin-top:78px;
+}
+
+.card_img{
+    width: 100%;
+    height: 308px;
+}
+
+.card_img:hover{
+    cursor:pointer;
+}
+
+.item_container{
+    margin-top: 33px;
+}
+
+.item_card{
+    position: relative;
+    width:100%;
+    z-index:  2;
+}
+
+.item_card .color_B5B5B5{
+    margin-top: 15px;
+    margin-left: 5px;
+}
+
+.item_card .item_title{
+    margin:5px 0px;
+    margin-left: 5px;
+}
+
+.item_card .discount_span{
+    font-weight: 700;
+    background-color: #0085FF;
+    color:white;
+    padding:1px 5px;
+    border-radius: 3px;
+    margin-right: 2px;
+    margin-left: 5px;
+}
+
+.item_card .weight_700{
+    margin-left: 5px;;
+}
+
+.icon_like{
+    position: absolute;
+    top:237px;
+    right:16px;
+}
+
+.icon_like:hover {
+    cursor:pointer;
+}
+
+.item_container{
+    display: grid;
+    justify-items: stretch;
+    width:100%;
+    column-gap: 30px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+/* .best_section{
+    position: relative;
+} */
+
+.slider_container{
+    position: absolute;
+}
+
+.img{
+    transition: 5s;
+}
+
+.slider_container{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    position: absolute;
+    left:0px;
+    padding:0px 100px;
+    box-sizing: border-box;
+    top:654px;
+}
+
+.slider_icon:hover{
+    cursor:pointer;
+
+}
+
+.time_section{
+    position:relative;
+    top:165px;
+}
+
+.time_section .item_container{
+    display: grid;
+    justify-items: stretch;
+    width:100%;
+    column-gap: 30px;
+    grid-template-columns: 1fr 1fr 2fr;
+}
+
+.timer_container{
+    height:308px;
+    align-items: center;
+    padding-top:26px;
+    padding-left: 70px;
+}
+
+.left_time{
+    font-size: 48px;
+    font-weight: 700;
+    margin-top:6px;
+}
+
+.time_section .gogo{
+    margin-top:10px;
+}
+
+.time_section button{
+    margin-top:40px;
+    width:175px;
+    height: 50px;
+    border: 1px solid #0085FF;
+    color: #0085FF;
+    background-color: white;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.time_section button:hover{
+    cursor: pointer;
+    background-color: #e8f5ff;
 }
