--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="./stylesheet.css" rel="stylesheet">
+    <link href="../static/CSS/stylesheet.css" rel="stylesheet">
+    <link href="../static/CSS/stylesheet_main.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-
 <body>
-    <a style="font-weight: 700;" href="../html/header.html" target="_blank"> ./nav.html</a>
-    <a style="font-weight: 700;" href="../html/main.html" target="_blank"> ./main.html</a>
+    ERROR
 </body>
 </html>
