--- a/templates/notice.html
+++ b/templates/notice.html
@@ -11,10 +11,10 @@
     <link href="../static/CSS/stylesheet.css" rel="stylesheet">
     <link href="../static/CSS/stylesheet_main.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../static/js/main.js"></script>
+    <script src="../static/js/notice.js"></script>
     <script src="../static/js/base.js"></script>
 </head>
 <body>
-    {{category}} 카테고리 아이템 전체보기
+    공지사항 게시판
 </body>
 </html>
