--- a/static/CSS/stylesheet.css
+++ b/static/CSS/stylesheet.css
@@ -10,6 +10,14 @@
     box-sizing: border-box;
 }
 
+#LOGO{
+    width:120px;
+}
+
+button{
+    cursor:pointer;
+}
+
 img{
     object-fit: cover;
 }
@@ -29,9 +37,21 @@ li{
     color: #b5b5b5;
 }
 
+.color_B5B5B5{
+    color: #838383;
+}
+
 .size_12{
     font-size:12px;
 }
+
+.size_14{
+    font-size:14px;
+}
+.size_28{
+    font-size:28px;
+}
+
 
 .weight_700{
     font-weight: 700;
@@ -50,3 +70,55 @@ li{
 .hide{
     display: none;
 }
+
+footer{
+    border-top: 1px solid #D9D9D9;
+    padding-top:22px;
+    width:100vw;
+    margin-left: -150px;
+    padding-left: 150px;
+    display: flex;
+    margin-bottom: 60px;
+}
+
+footer .introduction p{
+    margin-bottom: 6px;
+}
+
+footer button{
+    margin-left:50px;
+    width:48px;
+    height:48px;
+    border: 1px solid #B5B5B5;
+    color:#B5B5B5;
+    background-color: white;
+}
+
+.copyright{
+    position: absolute;
+    right:150px;
+}
+
+#gogo_top{
+    width:70px;
+    height:70px;
+    position: fixed;
+    right:117px;
+    bottom:46px;
+    z-index: 3;
+    cursor:pointer;
+}
+
+.fix{
+    position:fixed;
+    animation: down 0.5s ease
+}
+
+@keyframes down {
+    0%{
+      transform: translateY(-50px)
+    }
+    100%{
+      transform: translateY(0px)
+    }
+  }
