--- a/templates/signin.html
+++ b/templates/signin.html
@@ -19,8 +19,13 @@
     <div id="comp_header">
         <div id="component_top-list">
             <ul>
+                {% if session['id']=="dmswldmsgp00" %}
+                <li><a class="size_14"href="./wishlist">{{session['id']}}님 안녕하세요!</a></li>
+                <li><a class="size_14"href="./logout">로그아웃</a></li>
+                {% else %}
                 <li><a class="size_14"href="./signin">로그인</a></li>
                 <li><a class="size_14"href="./signup">회원가입</a></li>
+                {% endif %}
                 <li><a class="size_14 color_B5B5B5"href="error">주문배송</a></li>
                 <li><a class="size_14 color_B5B5B5"href="wishlist">장바구니</a></li>
             </ul>
@@ -45,14 +50,15 @@
         <form method="post" class="form" action="/submit_signin_form">
             <div class="input_id">
                 <span>아이디</span>
-                <input type="text" placeholder="아이디를 입력하세요." name="user_id">
+                <input type="text" placeholder="아이디를 입력하세요." class="user_id" name="user_id">
             </div>
             <div class="input_pw">
                 <span>비밀번호</span>
-                <input type="password" placeholder="비밀번호를 입력하세요." name="user_pw">
+                <input type="password" placeholder="비밀번호를 입력하세요." class="user_pw" name="user_pw">
             </div>
+            {{span}}
             <button class="btn_signin" onclick=pressed_signin() type="button">로그인</button>
-            <button class="btn_signup" onclick=pressed_signup() type="button">회원가입</button>
+            <button class="btn_signup" onclick="location.href='/signup'" type="button">회원가입</button>
         </form>
     </div>
 </body>
