--- a/templates/signup.html
+++ b/templates/signup.html
@@ -48,7 +48,7 @@
     <div class="signup">
         <p style="text-align: center;" class="section_title weight_700 size_28">회원가입</p>
         <p class="size_20">필수정보 입력</p>
-        <form method="post" class="form" action="/submit_signup_form">
+        <form method="post" class="form" action="/signup">
             <div class="input_id">
                 <span>아이디</span>
                 <input type="text" placeholder="아이디를 입력하세요." class="user_id"name="user_id">
