--- a/static/CSS/stylesheet.css
+++ b/static/CSS/stylesheet.css
@@ -92,6 +92,7 @@ footer .introduction p{
 }
 
 footer button{
+    padding: 0;
     margin-left:50px;
     width:48px;
     height:48px;
@@ -128,3 +129,18 @@ footer button{
       transform: translateY(0px)
     }
   }
+
+button{
+    border: 1px solid #0085FF;
+    color: #0085FF;
+    background-color: white;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+button:hover{
+    cursor: pointer;
+    /* background-color: #e8f5ff; */
+
+    filter: brightness(0.9);
+}
