--- a/templates/signin.html
+++ b/templates/signin.html
@@ -68,7 +68,7 @@
         <p class="size_14">주소 ㅣ 인천광역시 미추홀구 용현동 168-4</p>
         <p class="size_14">E-mail ㅣ eemune@naver.com</p>
     </div>
-    <button onclick="location.href='/signin'">A</button>
+    <button onclick="location.href='/adminpage'">A</button>
     <div class="copyright">
         <p class="color_838383 size_14">EEMUNE.COPYALLRIGHTRESERVED</p>
     </div>
